fixed overflow issues

--- a/styles/app.css
+++ b/styles/app.css
@@ -517,5 +517,5 @@ button.cta {
 }
 
 .menu-open {
-  overflow-y: hidden !important;
+  overflow: hidden !important;
 }
